Added zoom in/out, crosshair features.

--- a/tests/test_project/test_app/templates/datastream_usecase.html
+++ b/tests/test_project/test_app/templates/datastream_usecase.html
@@ -5,11 +5,13 @@
     <title>Datastream Test</title>
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}test_app/style.css" media="screen" />
 
-    <script type="text/javascript" src="{{ STATIC_URL }}test_app/jquery.js"></script>
-    {% comment %}<script type="text/javascript" src="{{ STATIC_URL }}pushserver/updates.js"></script>{% endcomment %}
-    <script type="text/javascript" src="{{ STATIC_URL }}test_app/flot/jquery.flot.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}test_app/datastream.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}test_app/views.js"></script>
+    <script language="javascript" type="text/javascript" src="{{ STATIC_URL }}test_app/jquery.js"></script>
+    {% comment %}<script language="javascript" type="text/javascript" src="{{ STATIC_URL }}pushserver/updates.js"></script>{% endcomment %}
+    <script language="javascript" type="text/javascript" src="{{ STATIC_URL }}test_app/flot/jquery.flot.js"></script>
+    <script language="javascript" type="text/javascript" src="{{ STATIC_URL }}test_app/flot/jquery.flot.selection.js"></script>
+    <script language="javascript" type="text/javascript" src="{{ STATIC_URL }}test_app/flot/jquery.flot.crosshair.js"></script>
+    <script language="javascript" type="text/javascript" src="{{ STATIC_URL }}test_app/datastream.js"></script>
+    <script language="javascript" type="text/javascript" src="{{ STATIC_URL }}test_app/views.js"></script>
 </head>
 <body>
 <h1>Datastream Test</h1>
