Added navigate plugin.

--- a/tests/test_project/test_app/templates/datastream_usecase.html
+++ b/tests/test_project/test_app/templates/datastream_usecase.html
@@ -9,6 +9,7 @@
     {% comment %}<script language="javascript" type="text/javascript" src="{{ STATIC_URL }}pushserver/updates.js"></script>{% endcomment %}
     <script language="javascript" type="text/javascript" src="{{ STATIC_URL }}test_app/flot/jquery.flot.js"></script>
     <script language="javascript" type="text/javascript" src="{{ STATIC_URL }}test_app/flot/jquery.flot.selection.js"></script>
+    <script language="javascript" type="text/javascript" src="{{ STATIC_URL }}test_app/flot/jquery.flot.navigate.js"></script>
     <script language="javascript" type="text/javascript" src="{{ STATIC_URL }}test_app/flot/jquery.flot.crosshair.js"></script>
     <script language="javascript" type="text/javascript" src="{{ STATIC_URL }}test_app/datastream.js"></script>
     <script language="javascript" type="text/javascript" src="{{ STATIC_URL }}test_app/views.js"></script>
