--- a/tests/test_project/test_app/templates/datastream_usecase.html
+++ b/tests/test_project/test_app/templates/datastream_usecase.html
@@ -15,9 +15,39 @@
     <script language="javascript" type="text/javascript" src="{{ STATIC_URL }}test_app/views.js"></script>
 </head>
 <body>
-<h1>Datastream Test</h1>
 
-<select id="selectmetric" width="200px"></select><button id="addmetric">add metric</button><button id="addplot">add plot</button><span id="step"></span><br/><br/>
-<div id="placeholder" style="margin-right: auto; margin-left: auto;"></div>
+<div id="content">
+    <h1>Datastream Test</h1>
+    <p>Left-click and drag to pan. Right-click and drag for zoom. Right-click for zoom-out.</p>
+    <p>TODO: pan on right / left scroll, zoom on up / down scroll.</p>
+    <br/>
+    <select id="selectmetric" width="200px"></select><button id="addmetric">add metric</button><button id="addplot">add plot</button><span id="step"></span><br/><br/>
+    <div id="placeholder"></div>
+</div>
+
+<script language="javascript">
+    $(document).ready(function() {
+
+        $('#addmetric').click(function() {
+            datastream.plot('#' + datastream.currentId(), $('#selectmetric').val());
+        });
+
+        $('#addplot').click(function() {
+            datastream.plot('#placeholder', $('#selectmetric').val());
+        });
+
+        datastream.metricList(function(metrics) {
+            $('select#selectmetric option').remove();
+
+            $.each(metrics, function(i, metric) {
+                var row = '<option value="' + metric.id + '">' + datastream.metricName(metric) + '</option>';
+                $(row).appendTo('select#selectmetric');
+            });
+
+            datastream.plot('#placeholder', $('#selectmetric').val());
+        });
+    });
+</script>
+
 </body>
 </html>
