--- a/tests/test_project/test_app/templates/demo.html
+++ b/tests/test_project/test_app/templates/demo.html
@@ -36,6 +36,16 @@
     <script type="text/javascript">
         $(document).ready(function () {
 
+            $.ajaxSetup({
+                'timeout': 5000,
+                'traditional': true
+            });
+
+            $(document).ajaxError(function (event, jqXHR, ajaxSettings, thrownError) {
+                window.console.error(event, jqXHR, ajaxSettings, thrownError);
+                alert(gettext("Oops, something went wrong..."));
+            });
+
             $('#addmetric').click(function () {
                 datastream.plot('#' + datastream.currentId(), $('#selectmetric').val());
             });
@@ -45,7 +55,7 @@
             });
 
             datastream.metricList(function (metrics) {
-                $('select#selectmetric option').remove();
+                $('#selectmetric option').remove();
 
                 $.each(metrics, function (i, metric) {
                     $('#selectmetric')
