Refactored to getJSON.

--- a/tests/test_project/test_app/templates/demo.html
+++ b/tests/test_project/test_app/templates/demo.html
@@ -36,14 +36,9 @@
     <script type="text/javascript">
         $(document).ready(function () {
 
-            $.ajaxSetup({
-                'timeout': 5000,
-                'traditional': true
-            });
-
             $(document).ajaxError(function (event, jqXHR, ajaxSettings, thrownError) {
                 window.console.error(event, jqXHR, ajaxSettings, thrownError);
-                alert(gettext("Oops, something went wrong..."));
+                alert("Oops, something went wrong...");
             });
 
             $('#addmetric').click(function () {
