--- a/tests/test_project/test_app/templates/demo.html
+++ b/tests/test_project/test_app/templates/demo.html
@@ -95,10 +95,13 @@
                 });
 
                 $('#placeholder').datastream({
+                    'to': new Date(2012,8,19,12,0,0,0),
                     'metrics': [ $('#selectmetric').val() ]
                 });
 
                 $('#placeholder_alt').datastream({
+                    'from': new Date(2012,8,13,12,0,0,0),
+                    'to': new Date(2012,8,19,12,0,0,0),
                     'metrics': [ $('#selectmetric_alt').val() ]
                 });
             });
